--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@testing-library/dom": "^10.4.0",
@@ -14,9 +17,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-grid-gallery": "^1.0.1",
+    "react-image-gallery": "^1.4.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.21.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.25.9",
     "ajv": "^8.17.1"
   }
 }
